--- a/turing-ui/projects/console/src/integration/component/instance/aem/integration-aem-source.component.html
+++ b/turing-ui/projects/console/src/integration/component/instance/aem/integration-aem-source.component.html
@@ -4,11 +4,11 @@
     <div class="Subhead-heading Subhead-heading--large">
       <div *ngIf="!isNewObject()" class="d-flex">
         <div style="height: 32px; border-radius: 50%;">
-          <svg width="35" height="35" style="border-radius: 50%;" [identiconHash]="aemSource.group | lowercase">
+          <svg width="35" height="35" style="border-radius: 50%;" [identiconHash]="aemSource.name | lowercase">
           </svg>
         </div>
         <div class="ml-2">
-          <span>{{ aemSource.group }}</span>
+          <span>{{ aemSource.name }}</span>
         </div>
       </div>
       <div *ngIf="isNewObject()" class="d-flex">
@@ -45,7 +45,7 @@
           <div class="Box-body overflow-auto">
             <p>
               This action <strong>cannot</strong> be undone. This will permanently delete the
-              <strong>{{ aemSource.group }}</strong> AEM Source.
+              <strong>{{ aemSource.name }}</strong> AEM Source.
             </p>
             <button (click)="delete(aemSource)" class="btn-danger btn btn-block">
               <span class="d-md-inline-block d-none">I understand the consequences, delete this AEM source</span>
@@ -53,7 +53,13 @@
           </div>
         </details-dialog>
       </details>
-      <button (click)="save(aemSource)" type="button" class="btn btn-primary">{{ saveButtonCaption() }}</button>
+      <button (click)="save(aemSource)" type="button" class="btn btn-primary mr-2">{{ saveButtonCaption() }}</button>
+    </div>
+
+  </div>
+  <div class="Subhead mt-1">
+    <div class="Subhead-actions" style="display: inherit;">
+      <button (click)="indexAll(aemSource)" type="button" class="btn mr-2">Index all content</button>
     </div>
   </div>
   <div class="Subhead mt-5">
@@ -68,7 +74,7 @@
       <label>Identifier</label>
     </div>
     <div class="form-group-body">
-      <input [(ngModel)]="aemSource.group" class="form-control" type="text" style="width: 100%;"/>
+      <input [(ngModel)]="aemSource.name" class="form-control" type="text" style="width: 100%;"/>
       <p class="note">
         AEM Source Identifier.
       </p>
@@ -79,7 +85,7 @@
       <label>Site Name</label>
     </div>
     <div class="form-group-body">
-      <input [(ngModel)]="aemSource.siteName" class="form-control" type="text"
+      <input [(ngModel)]="aemSource.authorSNSite" class="form-control" type="text"
              style="width: 100%;"/>
       <p class="note">
         AEM Site Name
@@ -91,7 +97,7 @@
       <label>Site URL</label>
     </div>
     <div class="form-group-body">
-      <input [(ngModel)]="aemSource.url" class="form-control" type="text" style="width: 100%;"/>
+      <input [(ngModel)]="aemSource.endpoint" class="form-control" type="text" style="width: 100%;"/>
       <p class="note">
         AEM Site URL.
       </p>
@@ -130,7 +136,7 @@
       <label>Semantic Navigation Site Name</label>
     </div>
     <div class="form-group-body">
-      <input [(ngModel)]="aemSource.turSNSite" class="form-control" type="text" style="width: 100%;"/>
+      <input [(ngModel)]="aemSource.authorSNSite" class="form-control" type="text" style="width: 100%;"/>
       <p class="note">
         Semantic Navigation Site Name.
       </p>
@@ -162,7 +168,7 @@
       <label>URL Prefix</label>
     </div>
     <div class="form-group-body">
-      <input [(ngModel)]="aemSource.urlPrefix" class="form-control" type="text" style="width: 100%;"/>
+      <input [(ngModel)]="aemSource.authorURLPrefix" class="form-control" type="text" style="width: 100%;"/>
       <p class="note">
         URL Prefix.
       </p>
@@ -196,21 +202,8 @@
       <label>Mapping</label>
     </div>
     <div class="form-group-body">
-      <ace [config]="config" [(value)]="aemSource.mappingJson" style="height: 400px;">
-      </ace>
       <p class="note">
         Mapping
-      </p>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="form-group-header">
-      <label>Provider Name</label>
-    </div>
-    <div class="form-group-body">
-      <input [(ngModel)]="aemSource.providerName" class="form-control" type="text" style="width: 100%;"/>
-      <p class="note">
-        Provider Name
       </p>
     </div>
   </div>
