--- a/turing-ui/projects/console/src/integration/component/instance/integration-instance-list-page.component.html
+++ b/turing-ui/projects/console/src/integration/component/instance/integration-instance-list-page.component.html
@@ -41,8 +41,8 @@
             {{integrationInstance.description}}
           </div>
           <div style="margin-top: 5px;">
+            <span title="Label: green outline label" class="Label Label--outline Label--outline-green">{{integrationInstance.vendor}}</span>
             <span title="Label: green outline label" class="Label Label--outline Label--outline-green">Active</span>
-
           </div>
           <div class="text-gray-light d-flex flex-items-center" style="margin-top: 10px;">
             <div class="mr-3">
