--- a/turing-ui/projects/console/src/logging/component/aem/logging-aem-page.component.html
+++ b/turing-ui/projects/console/src/logging/component/aem/logging-aem-page.component.html
@@ -11,17 +11,16 @@
         <div class="d-table-cell col-3">
           <div style=" overflow-wrap: break-word;width: 300px;">{{ aem.logger }}</div>
         </div>
-
-        <div class="d-table-cell col-7">
+        <div class="d-table-cell col-4">
           <pre style="overflow-wrap: break-word;max-width: 200px">
             {{ aem.message }}</pre>
-
         </div>
-
+        <div class="d-table-cell col-3">
+          <pre style="overflow-wrap: break-word;max-width: 200px">
+            {{ aem.stackTrace }}</pre>
+        </div>
       </div>
-
     </div>
-
 </div>
 <ng-template #loading>
   <span>Loading</span><span class="AnimatedEllipsis"></span>
