--- a/turing-ui/projects/console/src/logging/component/indexing/logging-indexing-page.component.html
+++ b/turing-ui/projects/console/src/logging/component/indexing/logging-indexing-page.component.html
@@ -8,6 +8,9 @@
       <div class="d-table-cell col-1" style="width: 150px;">
         <div>{{ indexing.status }}</div>
       </div>
+      <div class="d-table-cell col-1" style="width: 150px;">
+        <div>{{ indexing.loggingStatus }}</div>
+      </div>
       <div class="d-table-cell col-1" style="width: 100px;">
         <div>{{ indexing.source }}</div>
       </div>
@@ -22,6 +25,9 @@
       </div>
       <div class="d-table-cell col-1" style="width: 200px;">
         <div>{{ indexing.sites }}</div>
+      </div>
+      <div class="d-table-cell col-1" style="width: 150px;">
+        <div>{{ indexing.details }}</div>
       </div>
     </div>
 
