--- a/turing-ui/projects/console/src/logging/component/server/logging-server-page.component.html
+++ b/turing-ui/projects/console/src/logging/component/server/logging-server-page.component.html
@@ -3,7 +3,7 @@
     <div *ngFor="let server of serverList" class="mb-2">
       <div class="d-table">
         <div class="d-table-cell col-1" style="width: 200px;text-wrap: nowrap;">
-          <div>{{ server.timestamp | amTimeAgo }}</div>
+          <div>{{ server.date | amTimeAgo }}</div>
         </div>
         <div class="d-table-cell col-1" style="width: 100px;">
           <div>{{ server.level }}</div>
