Connector: Refactoring package names

--- a/turing-ui/projects/console/src/integration/component/instance/aem/integration-aem-source.component.html
+++ b/turing-ui/projects/console/src/integration/component/instance/aem/integration-aem-source.component.html
@@ -59,6 +59,7 @@
   </div>
   <div class="Subhead mt-1">
     <div class="Subhead-actions" style="display: inherit;">
+      <button (click)="reindexAll(aemSource)" type="button" class="btn mr-2">Reindex all content</button>
       <button (click)="indexAll(aemSource)" type="button" class="btn mr-2">Index all content</button>
     </div>
   </div>
