Connector: Using Provider Name

--- a/turing-ui/projects/console/src/integration/component/instance/aem/integration-aem-source.component.html
+++ b/turing-ui/projects/console/src/integration/component/instance/aem/integration-aem-source.component.html
@@ -59,8 +59,8 @@
   </div>
   <div class="Subhead mt-1">
     <div class="Subhead-actions" style="display: inherit;">
-      <button (click)="reindexAll(aemSource)" type="button" class="btn mr-2">Reindex all content</button>
-      <button (click)="indexAll(aemSource)" type="button" class="btn mr-2">Index all content</button>
+      <button (click)="reindexAll(aemSource.name)" type="button" class="btn mr-2">Reindex all content</button>
+      <button (click)="indexAll(aemSource.name)" type="button" class="btn mr-2">Index all content</button>
     </div>
   </div>
   <div class="Subhead mt-5">
